2008-01-05  Richard Jones  <rjones@redhat.com>

	Update documentation for Windows.
	* README: Update documentation for Windows.

	Build libvirt and examples on Windows (MinGW).
	* aclocal.m4: Add AC_CHECK_OCAML_MODULE to check for OCaml
	  modules directly (without ocamlfind being needed).
	* configure.ac: Remove requirement for ocamlfind.
	* config.guess, config.sub: Ship these files to guess host,
	  build and target.
	* libvirt/Makefile.in, examples/Makefile.in: Change these
	  so they don't require ocamlfind, do the right thing on MinGW.
	* Make.rules.in: Make.rules is now generated from this file.
	  File can use ocamlfind or direct ocaml commands as available.
	* .hgignore: Ignore some generated files on Windows.

2008-01-04  Richard Jones  <rjones@redhat.com>

	Make extlib an optional dependency.
	* Makefile.in, README, configure.ac, examples/Makefile.in,
	  libvirt/Makefile.in, mlvirtmanager/Makefile.in: Much code
	  doesn't really need extlib, so make it optional.
	  Bail earlier in configure step if we don't have ocamlfind.

2007-12-20  Richard Jones  <rjones@redhat.com>

	* libvirt/libvirt_c.c: Use enter/leave_blocking_section around
	  synchronous libvirt API calls, so that multithreaded OCaml
	  programs can be used.
	* configure.ac: Version 0.4.0.0 for release.
	* libvirt/libvirt.ml, libvirt/libvirt.mli, libvirt/libvirt_c.c:
	  Change the ad-hoc "foo not supported" exception into a
	  specific Libvirt.Not_supported "foo" exception.
	* virt-top/virt_top.ml: Change virt-top to understand new
	  exception type.

2007-11-20  Richard Jones  <rjones@redhat.com>

	* libvirt/libvirt.mli, libvirt/libvirt.ml: New error numbers
	  in base libvirt.
	* libvirt/libvirt_c.c: Gracefully handle the case where libvirt
	  throws an error number we have not heard of before (eg. when
	  dynamic linking with newer libvirt).
	* configure.ac: Check <libvirt/virterror.h> exists.
	* configure.ac: Version 0.3.3.4.