@@ -1,2 +1,0 @@
-mlvirsh.cmo: ../libvirt/libvirt.cmi 
-mlvirsh.cmx: ../libvirt/libvirt.cmx 
